--- a/DS Project.qmd
+++ b/DS Project.qmd
@@ -36,7 +36,7 @@ The answers to these questions promise not only to advance our understanding of 
 
 
 
-# Step 2
+# Section 2
 
 ```{r}
 #Set-up
@@ -45,117 +45,51 @@ The answers to these questions promise not only to advance our understanding of 
 library(tidyverse)
 ```
 
-
-
-## Data Pre-Processing
-
-Our journey through data analysis began with a structured approach to preparing our datasets, childcare_costs.csv and counties.csv, for comprehensive exploration. This preparation involved a series of steps aimed at refining and integrating our data, ensuring it was primed for the analyses that lay ahead. Here, we detail the practical steps taken, accompanied by the R code used to execute these operations.
-
-Initial Data Inspection
-Before delving into the pre-processing steps, we initiated our exploration by loading and inspecting the datasets to understand their structure:
-
-### Loading the datasets
 ```{r}
+# Load and inspect the datasets
 childcare_costs <- read.csv("C:/Users/Lucas Rapeepat/Downloads/childcare_costs.csv")
 counties <- read.csv("C:/Users/Lucas Rapeepat/Downloads/counties.csv")
-
-```
-
-# Initial inspection to understand the structure and contents
-```{r}
 str(childcare_costs)
 str(counties)
-```
-Number of Counties:
-How many unique counties are available for analysis?
 
-```{r}
-counties |>
-  n_distinct()
-```
+# Size of data pre-merge
+dim(childcare_costs)
+dim(counties)
 
-Joining the Datasets
-Our first major step was to merge the two datasets using the county_fips_code as a key. This inner join operation ensured that we retained only those records present in both datasets, facilitating a unified analysis framework.
 
-```{r}
-# Merging the datasets on the county_fips_code
+# Merge datasets
 combined_data <- childcare_costs |>
   inner_join(counties, by = "county_fips_code")
 
-```
-
-
-Removing Missing Data
-To enhance the reliability of our analysis, we next focused on identifying and excluding rows with missing values, particularly in critical variables such as childcare costs and county characteristics.
-
-```{r}
-# Removing rows with any missing values
+# Remove missing data
 cleaned_data <- combined_data |>
   drop_na()
 
-```
+#Counting Counties
+cleaned_data |>
+  select(county_name) |>
+  n_distinct(na.rm = TRUE)
 
+#Dim Cleaned Data
 
-
-Data Filtering
-With a focus on our analysis timeframe (2008 to 2018) and specific variables of interest, we applied filters to refine our dataset further, ensuring relevance and focus in our analysis.
-
-```{r}
-# Example of filtering data (if specific years or conditions were needed)
-# For demonstration, assuming we proceed with the full dataset as is
-
-# cleaned_data <- cleaned_data %>%
-#   filter(year >= 2008 & year <= 2018)
-
-```
-
-
-
-Creation of New Variables
-To facilitate deeper insights and enable more nuanced analyses, we derived new variables from our existing data, such as categorizations based on socio-economic indicators.
-
-```{r}
-# Example of creating a new variable (categorizing counties by median income)
-# For demonstration, assuming no new variables were created at this step
-
-# cleaned_data <- cleaned_data %>%
-#   mutate(income_category = cut(median_household_income, 
-#                                breaks = quantile(median_household_income, 
-#                                                   probs = 0:5 / 5, na.rm = TRUE),
-#                                include.lowest = TRUE))
-
-```
-
-
-Final Dataset Dimensions
-After these steps, we examined the dimensions of our final dataset to confirm the scope of our analysis base:
-
-```{r}
-nrow(cleaned_data)
-ncol(cleaned_data)
 dim(cleaned_data)
 ```
+
+## Data Pre-Processing
+In the Data Pre-Processing section of our report, we initiated our in-depth analysis with an extensive review of the two core datasets at our disposal: childcare_costs.csv and counties.csv. The childcare_costs file was a rich repository, with tens of thousands of rows encapsulating crucial childcare pricing data. The counties dataset, while not as extensive, provided essential demographic and socioeconomic indicators for each county.
+
+We merged the childcare_costs and counties datasets on the county_fips_code, which acted as a unique identifier for each county, and ensured that only records with matching identifiers in both datasets were retained.
+
+The dimensions of the raw childcare costs data before merging are 34567 by 61, while the dimensions of the counties table are 3144 by 4.
+After the merge, the dimensions of the cleaned data are 23342 by 64.
+
+There are 1779 unique counties available for analysis, which we counted from the cleaned and joined dataset.
+
+
 
 
 # Section 3
 
-
-Did childcare costs (by age group) on average change over time from 2008 to 2018?
-```{r}
-cost_trends <- cleaned_data |>
-  select(study_year, mc_infant, mc_toddler, mc_preschool) |>
-  group_by(study_year) |>
-  summarize(across(starts_with("mc"), mean, na.rm = TRUE))
-
-ggplot(cost_trends, aes(x = study_year)) +
-  geom_line(aes(y = mc_infant, color = "Infant")) +
-  geom_line(aes(y = mc_toddler, color = "Toddler")) +
-  geom_line(aes(y = mc_preschool, color = "Preschool")) +
-  labs(title = "Childcare Costs Trends from 2008 to 2018",
-       x = "Year",
-       y = "Average Cost",
-       color = "Age Group")
-```
 
 
 
@@ -235,6 +169,49 @@ care_cost_comparison
 ```
 
 
+# Section 4
+
+Did childcare costs (by age group) on average change over time from 2008 to 2018?
+```{r}
+cost_trends <- cleaned_data |>
+  select(study_year, mc_infant, mc_toddler, mc_preschool) |>
+  group_by(study_year) |>
+  summarize(across(starts_with("mc"), mean, na.rm = TRUE))
+
+ggplot(cost_trends, aes(x = study_year)) +
+  geom_line(aes(y = mc_infant, color = "Infant")) +
+  geom_line(aes(y = mc_toddler, color = "Toddler")) +
+  geom_line(aes(y = mc_preschool, color = "Preschool")) +
+  labs(title = "Childcare Costs Trends from 2008 to 2018",
+       x = "Year",
+       y = "Average Cost",
+       color = "Age Group")
+```
+
+How were Childcare costs related to Median Household Income?
+
+```{r}
 
 
+# Assuming 'cleaned_data' has columns 'mhi_2018' for Median Household Income and 'mc_infant' for Infant Care Costs.
+ggplot(cleaned_data, aes(x = mhi_2018, y = mc_infant)) +
+  geom_point(aes(color = county_fips_code)) +
+  labs(title = "Scatterplot of Childcare Costs vs. Median Household Income",
+       x = "Median Household Income ($)",
+       y = "Average Infant Childcare Costs ($/week)",
+       color = "County Code"
+    ) 
+  
+
+```
+
+```{r}
+ggplot(cleaned_data, aes(x = mc_infant)) +
+  geom_histogram(bins = 30, fill = "blue", alpha = 0.7) +
+  labs(title = "Histogram of Infant Childcare Costs Distribution",
+       x = "Infant Childcare Costs ($/week)",
+       y = "Frequency") +
+  theme_minimal()
+
+```
 
